// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BeerCard rendering should render a card for a beer that's in available status 1`] = `
<div
  className="MuiPaper-root MuiCard-root makeStyles-beerCard-1 MuiPaper-elevation8 MuiPaper-rounded"
  data-testid="beercard"
>
  <div
    className="MuiCardHeader-root"
    style={
      Object {
        "backgroundColor": "#DE7C00",
        "color": "black",
      }
    }
  >
    <div
      className="MuiCardHeader-content"
    >
      <span
        className="MuiTypography-root MuiCardHeader-title MuiTypography-h5 MuiTypography-displayBlock"
      >
        Seeker
      </span>
      <span
        className="MuiTypography-root MuiCardHeader-subheader MuiTypography-body1 MuiTypography-colorInherit MuiTypography-displayBlock"
      >
        Juicy Pale Ale
      </span>
    </div>
  </div>
  <div
    className="MuiCardContent-root makeStyles-beerCardContent-3"
  >
    <p
      className="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextPrimary MuiTypography-gutterBottom"
    >
      An American Pale Ale with tropical, fruity hops.
    </p>
    <p
      className="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextPrimary MuiTypography-gutterBottom"
    >
      5.5%
    </p>
    <div
      className="makeStyles-tagArray-4"
    >
      <div
        className="MuiChip-root makeStyles-tagChip-5 MuiChip-sizeSmall"
        onKeyDown={[Function]}
        onKeyUp={[Function]}
      >
        <span
          className="MuiChip-label MuiChip-labelSmall"
        >
          juicy
        </span>
      </div>
      <div
        className="MuiChip-root makeStyles-tagChip-5 MuiChip-sizeSmall"
        onKeyDown={[Function]}
        onKeyUp={[Function]}
      >
        <span
          className="MuiChip-label MuiChip-labelSmall"
        >
          bright
        </span>
      </div>
      <div
        className="MuiChip-root makeStyles-tagChip-5 MuiChip-sizeSmall"
        onKeyDown={[Function]}
        onKeyUp={[Function]}
      >
        <span
          className="MuiChip-label MuiChip-labelSmall"
        >
          refreshing
        </span>
      </div>
    </div>
    <div
      className="makeStyles-servingFormats-6"
    >
      <img
        alt="draught"
        className="makeStyles-servingFormatImage-7"
        src="draught.png"
      />
    </div>
  </div>
  <div
    className="MuiCardActions-root makeStyles-actionArea-8 MuiCardActions-spacing"
  />
</div>
`;

exports[`BeerCard rendering should render a card for a beer that's in voting status 1`] = `
<div
  className="MuiPaper-root MuiCard-root makeStyles-beerCard-1 MuiPaper-elevation8 MuiPaper-rounded"
  data-testid="beercard"
>
  <div
    className="MuiCardHeader-root"
    style={
      Object {
        "backgroundColor": "#000000",
        "color": "white",
      }
    }
  >
    <div
      className="MuiCardHeader-content"
    >
      <span
        className="MuiTypography-root MuiCardHeader-title MuiTypography-h5 MuiTypography-displayBlock"
      >
        Valkyrie
      </span>
      <span
        className="MuiTypography-root MuiCardHeader-subheader MuiTypography-body1 MuiTypography-colorInherit MuiTypography-displayBlock"
      >
        Chocolate Stout
      </span>
    </div>
  </div>
  <div
    className="MuiCardContent-root makeStyles-beerCardContent-3"
  >
    <p
      className="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextPrimary MuiTypography-gutterBottom"
    >
      A dark chocolate milk stout.
    </p>
    <p
      className="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextPrimary MuiTypography-gutterBottom"
    >
      6.0% - 7.0% ABV
    </p>
    <div
      className="makeStyles-tagArray-4"
    >
      <div
        className="MuiChip-root makeStyles-tagChip-5 MuiChip-sizeSmall"
        onKeyDown={[Function]}
        onKeyUp={[Function]}
      >
        <span
          className="MuiChip-label MuiChip-labelSmall"
        >
          dark
        </span>
      </div>
      <div
        className="MuiChip-root makeStyles-tagChip-5 MuiChip-sizeSmall"
        onKeyDown={[Function]}
        onKeyUp={[Function]}
      >
        <span
          className="MuiChip-label MuiChip-labelSmall"
        >
          chocolate
        </span>
      </div>
      <div
        className="MuiChip-root makeStyles-tagChip-5 MuiChip-sizeSmall"
        onKeyDown={[Function]}
        onKeyUp={[Function]}
      >
        <span
          className="MuiChip-label MuiChip-labelSmall"
        >
          rich
        </span>
      </div>
    </div>
    <div
      className="makeStyles-servingFormats-6"
    />
  </div>
  <div
    className="MuiCardActions-root makeStyles-actionArea-8 MuiCardActions-spacing"
  >
    <p
      className="MuiTypography-root MuiTypography-body2 MuiTypography-colorTextPrimary"
    >
      543
       Votes
    </p>
    <button
      aria-label="upvote"
      className="MuiButtonBase-root MuiIconButton-root makeStyles-iconButton-9"
      data-testid="upvoteButton"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root makeStyles-upvoteIcon-10"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 8V4l8 8-8 8v-4H4V8z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;
